@@ -19,6 +19,8 @@
 * added some robustness to determining executable paths for queue
   submission, eliminating calls to bash for sub-jobs
 * segway: add --exclude-coords option, works like --include-coords
+* segway: add arcsinh-norm distribution
+* segway: disabled track weighting
 
 0.1.10:
 
